Fixed spacing in Yelp web app, need to fix people showing up..

--- a/public/Helios/assets/css/main.css
+++ b/public/Helios/assets/css/main.css
@@ -184,8 +184,12 @@ input, select, textarea {
 		margin-bottom: 1em;
 	}
 
-	p {
+	p { 
 		text-align: justify;
+	}
+
+	p.cen {
+		text-align:center;
 	}
 
 	br.clear {
@@ -1777,6 +1781,14 @@ input, select, textarea {
 	}
 
 /* Image */
+	.yelp {
+		position: relative;
+		display: inline-block;
+		border: 0;
+		text-align: center;
+		outline: 0;
+	}
+
 
 	.image {
 		position: relative;
@@ -1837,8 +1849,8 @@ input, select, textarea {
 			filter: alpha(opacity=50);
 		}
 			.image.yelp {
-	    	width: 170px;
-   			height: 140px;
+	    	width: 300px;
+	    	height: auto;
     		background-position: center center;
   			background-repeat: no-repeat;
   			overflow: hidden;
